# Synapse

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  synapse-update.ps1
.githooks/: pre-push
crates/synapse-profiles/: Cargo.toml
crates/synapse-profiles/profiles/: chrome.toml  everquest.live.toml  luanti.minetest.toml  minecraft.java.toml  notepad.toml  paint.toml  terminal.toml  vscode.toml
crates/synapse-profiles/src/: error.rs  lib.rs  parser.rs  resolver.rs  toml_format.rs  watcher.rs
crates/synapse-profiles/src/package/: digest.rs  mod.rs  types.rs  validation.rs
crates/synapse-profiles/tests/: package_manifest.rs  parse_bundled.rs  runtime_refresh.rs
crates/synapse-profiles/tests/fixtures/profile_registry/curated_starter_registry/: curated_luanti_package_manifest.toml  edge_chrome_missing_compatibility_manifest.toml  edge_chrome_profile_mismatch_manifest.toml  edge_chrome_unknown_use_scope_manifest.toml  edge_minecraft_missing_compatibility_manifest.toml  edge_minecraft_profile_mismatch_manifest.toml  edge_minecraft_remote_allowed_manifest.toml  edge_minecraft_unknown_use_scope_manifest.toml  edge_missing_compatibility_manifest.toml  edge_notepad_missing_compatibility_manifest.toml  edge_notepad_profile_mismatch_manifest.toml  edge_notepad_unknown_use_scope_manifest.toml  edge_terminal_missing_compatibility_manifest.toml  edge_terminal_profile_mismatch_manifest.toml  edge_terminal_unknown_use_scope_manifest.toml  edge_unknown_use_scope_manifest.toml  edge_vscode_missing_compatibility_manifest.toml  (+2 more)
(+589 files in other folders)
